tests/invalid-gd-scripts/enum_w_if.gd
enum WithIfElse { IF = 1 if true else [1,2, 3 ] }
